--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,15 +15,17 @@
 </head>
 
   <body>
+    <div class="wrapper">
+    <nav class="nav-bar">
+      <a href="#">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <a><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </nav>
   Innovation
   On
   Demand
@@ -50,14 +52,19 @@
 
   Vision
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
   
+  <footer>
+    <p>  
+    Contact
+    123 Way 456 Street
+    Somewhere, USA
+    1 (888) 888-8888
+    sales@greatidea.io></p>
+  
+  
+  Copyright Great Idea! 2018
+  </footer>
+  
+    </div>
   </body>
 </html>
