--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -23,16 +23,23 @@
       <a href="#">Features</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
+    
 
-  <a><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+  
+      <a><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </nav>
-  Innovation
+
+  <header>
+  <h1>Innovation
   On
   Demand
-
+  </h1>
+  <button>
   Get Started
-
+  </button>
   <img src="img/header-img.png" alt="Image of a code snippet.">
+</header>
+
 
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
