simplified some of the code!

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,6 +15,8 @@
 </head>
 
   <body>
+
+
     <div class="wrapper">
     <nav class="nav-bar">
       <a href="#">Services</a>
@@ -40,7 +42,7 @@
   <img src="img/header-img.png" alt="Image of a code snippet.">
 </header>
 
-  <div class="feat-about">
+  <section class="feat-about">
   
   <h2>Features</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
@@ -48,16 +50,17 @@
   
   
   <h2>About</h2>
+
   <p>
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
   </p>
 
-</div>
+  </section>
 
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
-  <div class="serv-proj-miss">
+  <section class="serv-proj-miss">
   <h2>Services</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 </p>
@@ -68,9 +71,9 @@
   <h2>Vision</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </p>
-  </div>
+  </section>
   
-  <div>    
+  <section class ="contact">    
     <h2>Contact</h2>
     <p>
     123 Way 456 Street
@@ -79,7 +82,7 @@
     <p>1 (888) 888-8888</p>
     <p>
     sales@greatidea.io></p>
-  </div>
+    </section>
   <footer>
   <p id="Copyright">
   Copyright Great Idea! 2018
