--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -28,10 +28,11 @@
     
 
   
-      <a><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </nav>
 
   <header>
+  <div class ="header-left">
   <h1>Innovation
   On
   Demand
@@ -39,7 +40,10 @@
   <button>
   Get Started
   </button>
+  </div>
+  <div class ="img">
   <img src="img/header-img.png" alt="Image of a code snippet.">
+</div>
 </header>
 
   <section class="feat-about">
