--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,83 +15,84 @@
 </head>
 
   <body>
+    <div class="container">
+    <nav class="nav">
+  <a href="#">Services</a>
+  <a href="#">Product</a>
+  <a href="#">Vision</a>
+  <a href="#">Features</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
 
+  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
 
-    <div class="wrapper">
-    <nav class="nav-bar">
-      <a href="#">Services</a>
-      <a href="#">Product</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    
-
-  
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </nav>
-
-  <header>
-  <div class ="header-left">
-  <h1>Innovation
-  On
-  Demand
-  </h1>
-  <button>
-  Get Started
-  </button>
-  </div>
-  <div class ="img">
+  <header class="header group">
+    <div class="heading-wrapper">
+    <h1 class="heading">
+  Innovation<br>
+  On<br>
+  Demand<br>
+</h1>
+  <a class="btn" href= "#">Get Started</a>
+</div>
+<div class="img-wrapper">
   <img src="img/header-img.png" alt="Image of a code snippet.">
 </div>
 </header>
 
-  <section class="feat-about">
-  
-  <h2>Features</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-    </p>
-  
-  
-  <h2>About</h2>
+<hr>
 
-  <p>
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<section class ="top-section">
+  <article>
+    
+  <h3>Features</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+    Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
   </p>
+  </article><article>
+ <h3>About</h3> 
 
-  </section>
+ <p>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
+</article>
 
 
+</section>
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  <section class="serv-proj-miss">
-  <h2>Services</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-</p>
 
-  <h2>Product</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<section class="bottom-section"> 
+  <article>
+  <h3>Services</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</article>
+  <article>
+  <h3>Product</h3>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</article>
+<article>
+  <h3>Vision</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. 
+  Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+</article>
+</section>
+<hr>
+<section class = "contact-section">
+  <h3>Contact</h3>
+  <p>123 Way 456 Street<br>
+  Somewhere, USA<br><br>
+  1 (888) 888-8888<br><br>
+  sales@greatidea.io
 </p>
-  <h2>Vision</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-    </p>
-  </section>
-  
-  <section class ="contact">    
-    <h2>Contact</h2>
-    <p>
-    123 Way 456 Street
-    Somewhere, USA
-  </p>
-    <p>1 (888) 888-8888</p>
-    <p>
-    sales@greatidea.io></p>
-    </section>
-  <footer>
-  <p id="Copyright">
+</section>
+
+<footer>
   Copyright Great Idea! 2018
-  </p>
-  </footer>
+</footer>
     </div>
   </body>
 </html>
